tln/static/tln/main.css
/* ... */
#skip-link:hover { box-shadow: 0 0 14px 0 rgba(0, 13, 181, 0.8); }
#skip-link:focus, #skip-link:active {
    top: 0;
    left: 0;
    width: auto;
    height: auto;
    z-index: 1000 }


/* Todo Now Link
   ========================================================================== */

#todo-logo-nav {
    position: absolute;
    z-index: 100;
    top: -156px;
    right: -126px;
    margin-top: -10px;
    height: 220px;
    width: 294px !important;
    transform: rotate(32deg);
    transition: transform ease .9s; }
#todo-logo-nav.todo-logo-nav-mobile {
    top: -80px;
    right: -62px;
    height: 120px;
    width: 160px !important; }
#todo-logo-nav > img {
    position: absolute;
    width: 100%; }

#todo-logo-nav:hover,
#todo-logo-nav.todo-logo-nav-mobile.mobile-hover,
#top-nav-h #todo-logo-nav:hover {
    transform: rotate(22deg) translate(-9%, 68%); }

#todo-logo-nav .todo-logo-glow { opacity: 0; transition: opacity ease-in .9s; }
#todo-logo-nav:not(.todo-logo-nav-mobile):hover .todo-logo-glow,
#todo-logo-nav.todo-logo-nav-mobile.mobile-hover .todo-logo-glow {
    opacity: .8; transition-timing-function: ease-out; }

#top-nav-h #todo-logo-nav {
    opacity: 0;
    z-index: 202;
    top: -234px;
    right: 0;
    transition: opacity ease-out .2s, transform ease .9s;
    transform: rotate(32deg); }
#top-nav-h #todo-logo-nav.todo-logo-nav-mobile {
    top: -120px; }
#top-nav-h #todo-logo-nav.todo-logo-nav-mobile.mobile-hover {
    transform: rotate(22deg) translate(-14%, 79%); }
#top-nav-h.expanded #todo-logo-nav {
    opacity: 1;
    transition: opacity ease-in .3s .1s, transform ease .9s }

/* IE/Edge Fix
   ========================================================================== */
/* Sometimes there may be a 1px gap between the element border and its shadow
 * This seems to be due to arcane antialiasing computations and odd/even numbers... */

@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) { /* IE 10/11 */
.shadow-up { position: absolute; width: 100%; left: 0; top: -1px; border-bottom: solid 1px rgba(0, 5, 61, 0.7); }
.shadow-right { position: absolute; height: 100%; right: -1px; border-right: solid 1px rgba(0, 5, 61, 0.7); }
.shadow-down { position: absolute; width: 100%; left: 0; bottom: -1px; border-bottom: solid 1px rgba(0, 5, 61, 0.7); }
.shadow-left { position: absolute; height: 100%; left: -1px; border-right: solid 1px rgba(0, 5, 61, 0.7); } }
@supports (-ms-ime-align:auto) { /* Edge 12+ */
.shadow-up { position: absolute; width: 100%; top: -1px; border-bottom: solid 1px rgba(0, 5, 61, 0.7); }
.shadow-right { position: absolute; height: 100%; right: -1px; border-right: solid 1px rgba(0, 5, 61, 0.7); }
.shadow-down { position: absolute; width: 100%; bottom: -1px; border-bottom: solid 1px rgba(0, 5, 61, 0.7); }
.shadow-left { position: absolute; height: 100%; left: -1px; border-right: solid 1px rgba(0, 5, 61, 0.7); } }


/* ==========================================================================
/* Entries Display
/* ========================================================================== */

/* Entry Previews
   ========================================================================== */

.entry-links {
    padding: 0 20px;
    display: flex;
    flex-direction: column;
    align-items: center; }


/* Entry Header
   ========================================================================== */

.entry-title {
    font-weight: bold;
    text-align: center; }
.entry .entry-title {
    padding: 44px 8px 32px 0;
    font-size: 40px; }
@media (max-width: 960px) { .entry .entry-title { padding: 44px 0 32px 0; } }
.entry-list .entry-title {
    padding: 8px 0;
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
    font-family: AlegreyaSans, "Lucida Sans Unicode", "Lucida Grande", sans-serif;
    font-size: 26px;
    letter-spacing: -1px; }


/* Entry Content
   ========================================================================== */

.entry-content { line-height: 1.35; }
@media (max-width: 700px) { .entry-content { font-size: 19px; } }
.entry .entry-content img { border: 1px solid #deda99; }
.entry .entry-content img[src$=".png"] { border: 0; }
.entry .entry-content p { margin: 18px 0; line-height: 27px; }
.entry-content ul { list-style: square; padding-left: 40px; }
.entry-content li { list-style: square; }
.entry-content ul.midspaced > li { margin: 12px auto; }
.entry-content ul.midspaced > li:last-child { margin-bottom: 10px; }
.entry-content ul.midspaced > li > ul { margin-top: 4px; }
.entry-content blockquote, .entry-content q { font-weight: normal; font-style: italic; }
.entry-content cite { font-weight: bold; font-style: normal; }


/* Entry Sections
   ========================================================================== */

.entry .entry-section:first-child {
    margin-top: -14px; }
.entry .entry-section {
    padding-top: 20px;
    padding-bottom: 4px; }
.entry .entry-section-title {
    font-weight: bold;
    font-size: 30px; }


/* Entry Footer
   ========================================================================== */

.entry-footer {
    padding-top: 6px;
    display: flex;
    align-items: center;
    white-space: nowrap; }
@media (max-width: 700px) {
.entry-footer { font-size: 19px; } }

.entry-footer .entry-tags {
    font-size: 17px;
    display: inline;
    overflow: hidden;
    text-overflow: ellipsis;
    color: #737373;
    margin-right: -30px; }
#content-wrap .entry-footer .entry-tags a {
    color: inherit;
    transition: color 0.1s ease-in-out; }
#content-wrap .entry-footer .entry-tags a:hover { color: #f7a300; }
@media (max-width: 700px) {
.entry-footer .entry-tags { font-size: 16px; } }

.entry-footer .entry-discussions {
    flex: 1;
    display: flex;
    justify-content: flex-end;
    align-items: center; }
.entry-footer .entry-discussions img {
    margin: 3px 8px 0 4px;
    height: 14px; }

.entry-footer time {
    font-style: italic;
    text-align: right; }
/* ... */

